# bob

./: GAP.link  Makefile.am  Makefile.in  README  README.md  TODO  bob-osx.dmg  bob.cc  bob.h  carat.edit.link  compile32.sh  compile64.sh  compilelinux32.sh  compilelinux64.sh  compileosx32.sh  compileosx64.sh  config.h.in  configure  configure.ac  cplinux32.sh  cplinux32new.sh  cplinux64.sh  cplinux64new.sh  cposx32.sh  cposx64.sh  fplsa.edit  fplsa.edit.link  gap.cc  index.html  io.cc  notes  params.json  test.cc
BOB.app/Contents/: Info.plist
BOB.app/Contents/Resources/: applet.rsrc
BOB.app/Contents/Resources/Scripts/: main.scpt
modules/: io.cc
pub/: XGAP.link  carat.edit  carat.edit.link  fplsa.edit.link
scripts/: compile64.sh  cplinux32.sh  cplinux32new.sh  cplinux64.sh  cplinux64new.sh  cposx32.sh  cpsource.sh
